# tree-sitter-hoon

./: .gitignore  Cargo.toml  LICENSE  README.md  binding.gyp  grammar.js  package.json
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
queries/: highlights.scm
src/: grammar.json  node-types.json  scanner.c
test/corpus/: aura.txt  boolean.txt  cord.txt  date.txt  irregularForm.txt  knot.txt  lark.txt  mold.txt  name.txt  number.txt  rune_bar.txt  rune_buc.txt  rune_cen.txt  rune_col.txt  rune_dot.txt  rune_fas.txt  rune_ket.txt  rune_lus.txt  rune_mic.txt  rune_sig.txt  rune_tis.txt  rune_wut.txt  rune_zap.txt  specialIndex.txt  tape.txt  term.txt  wing.txt
