[package]
name = "tree-sitter-hoon"
description = "Hoon grammar for the tree-sitter parsing library"
version = "0.0.2"
keywords = ["incremental", "parsing", "hoon"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/urbit-pilled/tree-sitter-hoon"
edition = "2023"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.3"

[build-dependencies]
cc = "1.0"
